--- a/src/Core/SeniorDesign.Core.csproj
+++ b/src/Core/SeniorDesign.Core.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\UserConfigurableAttribute.cs" />
+    <Compile Include="Attributes\UserConfigurableDoubleAttribute.cs" />
     <Compile Include="Attributes\UserConfigurableIntegerAttribute.cs" />
     <Compile Include="Connections\Converters\DataConverter.cs" />
     <Compile Include="Connections\DataConnection.cs" />
