--- a/src/Plugins/Plugin.xml
+++ b/src/Plugins/Plugin.xml
@@ -3,10 +3,21 @@
 <!-- This XML is used to map plugins in this assembly for the Core -->
 <plugin name="Default Plugins" description="The default plugins included with Streamline">
   
-  <!-- Media Connections are the raw IO ports, such as a websocket or Bluetooth -->
-  <media name="Random Data" class="SeniorDesign.Plugins.Connections.RandomDataController"/>
+  <!-- Streams are the raw IO ports, such as a websocket or Bluetooth -->
+  <stream name="Audio Data" class="SeniorDesign.Plugins.Connections.AudioDataStream"/>
+  <stream name="Random Data" class="SeniorDesign.Plugins.Connections.RandomDataStream"/>
+  <stream name="Constant Data" class="SeniorDesign.Plugins.Connections.ConstantDataStream"/>
+
+  <!-- Pollers decide when data is requested from streams -->
+  <poller name="Periodic" class="SeniorDesign.Plugins.Connections.Pollers.PeriodicPoller"/>
+  
+  <!-- Converters change the raw bytes from a stream into data -->
+  <converter name="Simple Stream" class="SeniorDesign.Plugins.Connections.Converters.SimpleStreamConverter"/>
+  <converter name="Simple String" class="SeniorDesign.Plugins.Connections.Converters.SimpleStringConverter"/>
   
   <!-- Filters are objects that process data streams -->
+  <filter name="Additive" class="SeniorDesign.Plugins.Filters.AdditionFilter"/>
+  <filter name="Quantizer" class="SeniorDesign.Plugins.Filters.QuantizerFilter"/>
   <filter name="Rolling Average" class="SeniorDesign.Plugins.Filters.RollingAverageFilter"/>
   
 </plugin>
