--- a/src/FrontEnd/SeniorDesign.FrontEnd.csproj
+++ b/src/FrontEnd/SeniorDesign.FrontEnd.csproj
@@ -50,6 +50,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Components\AttributeEditorComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Components\AttributeEditors\SelectableListEditorComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Components\AttributeEditors\SelectableListEditorComponent.Designer.cs">
+      <DependentUpon>SelectableListEditorComponent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Components\AttributeEditors\DoubleEditorComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Components\AttributeEditors\DoubleEditorComponent.Designer.cs">
+      <DependentUpon>DoubleEditorComponent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Components\AttributeEditors\BooleanEditorComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Components\AttributeEditors\BooleanEditorComponent.Designer.cs">
+      <DependentUpon>BooleanEditorComponent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Components\AttributeEditors\IntegerEditorComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Components\AttributeEditors\IntegerEditorComponent.Designer.cs">
+      <DependentUpon>IntegerEditorComponent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Windows\ControlPanel.cs">
@@ -70,6 +97,21 @@
     <Compile Include="Windows\TestPanel.Designer.cs">
       <DependentUpon>TestPanel.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Components\AttributeEditors\SelectableListEditorComponent.resx">
+      <DependentUpon>SelectableListEditorComponent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Components\AttributeEditors\DoubleEditorComponent.resx">
+      <DependentUpon>DoubleEditorComponent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Components\AttributeEditors\BooleanEditorComponent.resx">
+      <DependentUpon>BooleanEditorComponent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Components\AttributeEditors\IntegerEditorComponent.resx">
+      <DependentUpon>IntegerEditorComponent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Components\AttributeEditorComponent.resx">
+      <DependentUpon>AttributeEditorComponent.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
