--- a/src/Core/SeniorDesign.Core.csproj
+++ b/src/Core/SeniorDesign.Core.csproj
@@ -61,6 +61,7 @@
     <Compile Include="PluginDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\ArrayUtil.cs" />
+    <Compile Include="Util\NumberUtil.cs" />
     <Compile Include="Util\StreamUtil.cs" />
   </ItemGroup>
   <ItemGroup />
