--- a/src/FrontEnd/SeniorDesign.FrontEnd.csproj
+++ b/src/FrontEnd/SeniorDesign.FrontEnd.csproj
@@ -50,9 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Components\AttributeEditorComponent.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Include="Components\IAttributeEditorComponent.cs" />
     <Compile Include="Components\AttributeEditors\SelectableListEditorComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -79,6 +77,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Windows\AdvancedBlockPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Windows\AdvancedBlockPanel.Designer.cs">
+      <DependentUpon>AdvancedBlockPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Windows\ControlPanel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,9 +113,6 @@
     <EmbeddedResource Include="Components\AttributeEditors\IntegerEditorComponent.resx">
       <DependentUpon>IntegerEditorComponent.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Components\AttributeEditorComponent.resx">
-      <DependentUpon>AttributeEditorComponent.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -121,6 +122,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Windows\AdvancedBlockPanel.resx">
+      <DependentUpon>AdvancedBlockPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Windows\ControlPanel.resx">
       <DependentUpon>ControlPanel.cs</DependentUpon>
     </EmbeddedResource>
