--- a/src/FrontEnd/SeniorDesign.FrontEnd.csproj
+++ b/src/FrontEnd/SeniorDesign.FrontEnd.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Components\AttributeEditors\StringEditorComponent.Designer.cs">
       <DependentUpon>StringEditorComponent.cs</DependentUpon>
     </Compile>
+    <Compile Include="Components\AttributeEditors\WrappedAttributeInfo.cs" />
     <Compile Include="Components\AttributeListComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -178,6 +179,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Components\Blocks\IOBlocks\ConverterEditorComponent.resx">
       <DependentUpon>ConverterEditorComponent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Components\Blocks\IOBlocks\PollerEditorComponent.resx">
+      <DependentUpon>PollerEditorComponent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Components\Blocks\IOBlocks\StreamEditorComponent.resx">
+      <DependentUpon>StreamEditorComponent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Components\Blocks\IOBlockViewerComponent.resx">
       <DependentUpon>IOBlockViewerComponent.cs</DependentUpon>
