--- a/src/FrontEnd/SeniorDesign.FrontEnd.csproj
+++ b/src/FrontEnd/SeniorDesign.FrontEnd.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Components\Blocks\BlockViewerComponent.Designer.cs">
       <DependentUpon>BlockViewerComponent.cs</DependentUpon>
     </Compile>
+    <Compile Include="Components\Blocks\ConnectionViewerComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Components\Blocks\ConnectionViewerComponent.Designer.cs">
+      <DependentUpon>ConnectionViewerComponent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Components\Blocks\IOBlocks\ConverterEditorComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -176,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Components\Blocks\BlockViewerComponent.resx">
       <DependentUpon>BlockViewerComponent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Components\Blocks\ConnectionViewerComponent.resx">
+      <DependentUpon>ConnectionViewerComponent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Components\Blocks\IOBlocks\ConverterEditorComponent.resx">
       <DependentUpon>ConverterEditorComponent.cs</DependentUpon>
