--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Output Files
+*.dll
 *.exe
 [Dd]ebug/
 [Rr]elease/
@@ -17,3 +18,7 @@ ehthumbs.db
 # Folder config file
 Desktop.ini
 
+#Exception
+
+*
+!/packages/
