--- a/src/Core/SeniorDesign.Core.csproj
+++ b/src/Core/SeniorDesign.Core.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\Metadata\MetadataAttribute.cs" />
+    <Compile Include="Attributes\Metadata\MetadataDataConverterAttribute.cs" />
     <Compile Include="Attributes\Metadata\MetadataDataStreamAttribute.cs" />
+    <Compile Include="Attributes\Metadata\MetadataPollerAttribute.cs" />
     <Compile Include="Attributes\UserConfigurable\UserConfigurableAttribute.cs" />
     <Compile Include="Attributes\UserConfigurable\UserConfigurableBooleanAttribute.cs" />
     <Compile Include="Attributes\UserConfigurable\UserConfigurableDoubleAttribute.cs" />
@@ -51,8 +53,10 @@
     <Compile Include="Attributes\UserConfigurable\UserConfigurableSelectableListAttribute.cs" />
     <Compile Include="Connections\Converters\DataConverter.cs" />
     <Compile Include="Connections\DataConnection.cs" />
+    <Compile Include="Connections\IDataConnectionComponent.cs" />
     <Compile Include="Connections\Pollers\PollingMechanism.cs" />
     <Compile Include="Connections\Streams\DataStream.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="CoreSettings.cs" />
     <Compile Include="DataPacket.cs" />
     <Compile Include="Exceptions\InvalidChannelCountException.cs" />
