--- a/src/Plugins/Plugin.xml
+++ b/src/Plugins/Plugin.xml
@@ -9,9 +9,11 @@
   <stream name="Random Data" class="SeniorDesign.Plugins.Connections.RandomDataStream"/>
   <stream name="Constant Data" class="SeniorDesign.Plugins.Connections.ConstantDataStream"/>
   <stream name="Console Data" class="SeniorDesign.Plugins.Connections.ConsoleDataStream"/>
+  <stream name="Serial COM Port" class="SeniorDesign.Plugins.Connections.SerialCOMStream"/>
 
   <!-- Pollers decide when data is requested from streams -->
   <poller name="Periodic" class="SeniorDesign.Plugins.Connections.Pollers.PeriodicPoller"/>
+  <poller name="Tick" class="SeniorDesign.Plugins.Connections.Pollers.TickPoller"/>
   
   <!-- Converters change the raw bytes from a stream into data -->
   <converter name="Simple Stream" class="SeniorDesign.Plugins.Connections.Converters.SimpleStreamConverter"/>
