--- a/src/Plugins/SeniorDesign.Plugins.csproj
+++ b/src/Plugins/SeniorDesign.Plugins.csproj
@@ -46,12 +46,14 @@
   <ItemGroup>
     <Compile Include="Connections\Converters\SimpleStreamConverter.cs" />
     <Compile Include="Connections\Converters\SimpleStringConverter.cs" />
+    <Compile Include="Connections\Pollers\TickPoller.cs" />
     <Compile Include="Connections\Pollers\PeriodicPoller.cs" />
     <Compile Include="Connections\Streams\AudioDataStream.cs" />
     <Compile Include="Connections\Streams\AudioFileStream.cs" />
     <Compile Include="Connections\Streams\ConsoleDataStream.cs" />
     <Compile Include="Connections\Streams\ConstantDataStream.cs" />
     <Compile Include="Connections\Streams\RandomDataStream.cs" />
+    <Compile Include="Connections\Streams\SerialCOMStream.cs" />
     <Compile Include="Enums\EncodingEnum.cs" />
     <Compile Include="Filters\AdditionFilter.cs" />
     <Compile Include="Filters\StopBandFilter.cs" />
