--- a/src/Plugins/SeniorDesign.Plugins.csproj
+++ b/src/Plugins/SeniorDesign.Plugins.csproj
@@ -49,7 +49,9 @@
     <Compile Include="Connections\Pollers\TickPoller.cs" />
     <Compile Include="Connections\Pollers\PeriodicPoller.cs" />
     <Compile Include="Connections\Streams\AudioDataStream.cs" />
+    <Compile Include="Connections\Streams\CSVFileReaderStream.cs" />
     <Compile Include="Connections\Streams\AudioFileStream.cs" />
+    <Compile Include="Connections\Streams\CSVFileWriterStream.cs" />
     <Compile Include="Connections\Streams\ConsoleDataStream.cs" />
     <Compile Include="Connections\Streams\ConstantDataStream.cs" />
     <Compile Include="Connections\Streams\RandomDataStream.cs" />
