--- a/src/FrontEnd/SeniorDesign.FrontEnd.csproj
+++ b/src/FrontEnd/SeniorDesign.FrontEnd.csproj
@@ -160,6 +160,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Windows\AboutPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Windows\AboutPanel.Designer.cs">
+      <DependentUpon>AboutPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Windows\AdvancedBlockPanel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -253,6 +259,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Windows\AboutPanel.resx">
+      <DependentUpon>AboutPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Windows\AdvancedBlockPanel.resx">
       <DependentUpon>AdvancedBlockPanel.cs</DependentUpon>
     </EmbeddedResource>
