--- a/src/Plugins/SeniorDesign.Plugins.csproj
+++ b/src/Plugins/SeniorDesign.Plugins.csproj
@@ -58,8 +58,13 @@
     <Compile Include="Connections\Streams\SerialCOMStream.cs" />
     <Compile Include="Enums\EncodingEnum.cs" />
     <Compile Include="Filters\AdditionFilter.cs" />
+    <Compile Include="Filters\ButterworthHighPassFilter1.cs" />
+    <Compile Include="Filters\ButterworthHighPassFilter2.cs" />
+    <Compile Include="Filters\ButterworthLowPassFilter2.cs" />
     <Compile Include="Filters\DelayFilter.cs" />
     <Compile Include="Filters\GainFilter.cs" />
+    <Compile Include="Filters\ButterworthLowPassFilter1.cs" />
+    <Compile Include="Filters\SimpsonsIntegratorFilter.cs" />
     <Compile Include="Filters\StopBandFilter.cs" />
     <Compile Include="Filters\IntegratorFilter.cs" />
     <Compile Include="Filters\DifferentiatorFilter.cs" />
