--- a/src/Plugins/Plugin.xml
+++ b/src/Plugins/Plugin.xml
@@ -6,6 +6,7 @@
   <!-- Streams are the raw IO ports, such as a websocket or Bluetooth -->
   <stream name="Audio Output" class="SeniorDesign.Plugins.Connections.AudioDataStream"/>
   <stream name="Audio File" class="SeniorDesign.Plugins.Connections.AudioFileStream"/>
+  <stream name="Microphone" class="SeniorDesign.Plugins.Connections.MicrophoneStream"/>
   <stream name="Random Data" class="SeniorDesign.Plugins.Connections.RandomDataStream"/>
   <stream name="Constant Data" class="SeniorDesign.Plugins.Connections.ConstantDataStream"/>
   <stream name="Console Data" class="SeniorDesign.Plugins.Connections.ConsoleDataStream"/>
